# softcomputingforsoftpeople

./: .gitignore  Cargo.toml  README.md
ex1/: Cargo.toml  README.md
ex1/src/: main.rs
plots/: task2_plots.R
proj/: Cargo.toml  README.md
proj/src/: corpus.rs  individual.rs  lib.rs  operators.rs
src/: individual.rs  lib.rs  scalarize.rs
src/algorithms/: mod.rs  moead.rs  nsga2.rs
src/operators/: binary.rs  mod.rs  order.rs  real.rs  utils.rs
src/utils/: indexmap.rs  mod.rs  rand.rs  real.rs
