[package]
name = "softcomputingforsoftpeople"
version = "0.0.1"
authors = [ "Frankie Robertson <frankie@robertson.name>" ]
#build = "build.rs"

[dependencies]
#bit-vec = "0.4.4"
safe-transmute = "0.7.0"
rand = "0.4.2"
rand_derive = "0.3.1"
ordered-float = "0.5.0"
arrayvec = "0.4.6"
bitwise = "0.1.1"
static_assertions = "0.2.5"
num-iter = "0.1"
structopt = { git = "https://github.com/TeXitoi/structopt.git", rev = "e046a86f3977b0d0bf796c7f9f1adbe43742d091" }
structopt-derive = { git = "https://github.com/TeXitoi/structopt.git", rev = "e046a86f3977b0d0bf796c7f9f1adbe43742d091" }
nalgebra = "0.14.0"
lazy_static = "1.0.0"
itertools = "0.7.6"
alga = "0.5.2"
num-traits = "0.1.41"
csv = "1.0.0-beta.5"
opus-parse = "0.0.3"
pbr = "1.0.0"
indexmap = { version = "0.4.1", features = ["serde-1"] }
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9.2"
derive-new = "0.5.0"
