[package]
name = "softcomputingforsoftpeople-ex1"
version = "0.0.1"
authors = [ "Frankie Robertson <frankie@robertson.name>" ]
#build = "build.rs"

[dependencies]
#bit-vec = "0.4.4"
safe-transmute = "0.7.0"
rand = { git = "https://github.com/frankier/rand", rev = "452597f0385158130f54d8ae92f652d187e4fa55" }
rand_derive = "0.3.1"
ordered-float = "0.5.0"
arrayvec = "0.4.6"
bitwise = "0.1.1"
static_assertions = "0.2.5"
num-iter = "0.1"
structopt = "0.1.0"
structopt-derive = "0.1.0"
